# wasm-async-main

./: .gitignore  Cargo.toml  bindings.json  run.sh
guest/: Cargo.toml
guest/.cargo/: config
guest/src/: main.rs
shared-defs/: Cargo.toml
shared-defs/src/: lib.rs
src/: main.rs
