[package]
name = "wasm-async-main"
version = "0.1.0"
authors = ["Adam C. Foltzer <acfoltzer@fastly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
lucet-runtime = "0.4"
lucet-wasi = "0.4"
shared-defs = { path = "./shared-defs" }

[dependencies.tokio]
version = "0.2"
features = ["full"]
